# horrible-llm

./: .gitignore  README.md  main.py  pyproject.toml
horriblellm/: __init__.py  horriblellm.py
reasoning/: evaluation.md
